<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:overScrollMode="always"
    tools:context=".activities.MenuActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Blue5"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/imageBack"
            android:text="@string/me"
            android:textSize="28sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/layoutImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/img_profile"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:background="@drawable/background_image"
                    android:scaleType="centerCrop"
                    app:riv_oval="true"/>
                <TextView
                    android:id="@+id/nameUser"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/App_name"
                    android:textStyle="bold"
                    android:textSize="32sp"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:text="@string/account_setting"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:textSize="16sp"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginStart="30dp"
                android:id="@+id/recyclerViewAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:overScrollMode="never"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:background="@color/gray"
                android:layout_margin="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/more"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"

                android:id="@+id/recyclerViewMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:overScrollMode="never" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5px"
                android:background="@color/gray"
                android:layout_margin="20dp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/logOut"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/log_out"
                android:textSize="13sp"
                android:textStyle="bold"
                app:cornerRadius="8dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>